syntax = "proto3";

package api.review.v1;

import "google/api/annotations.proto";

option go_package = "review_service/api/review/v1;v1";
option java_multiple_files = true;
option java_package = "api.review.v1";

service Review {
	//C端创建评价
  rpc CreateReview(CreateReviewRequest) returns (CreateReviewReply) {
    option (google.api.http) = {
      post: "/v1/review",
      body: "*",
    };
  }

  // C端获取评价
  rpc GetReview(GetReviewRequest) returns (GetReviewReply) {
	option (google.api.http) = {
		get: "/v1/review/{reviewID}",
	  };
  }

  // B端回复评价
  rpc ReplyReview(ReplyReviewRequest) returns (ReplyReviewReply) {
	option (google.api.http) = {
		post: "v1/review/reply",
		body: "*",
	};
  }

  rpc GetReplyReview(GetReviewReplyRequest) returns (ReviewReplyInfo) {
	option (google.api.http) = {
		get: "v1/review/reply/{replyID}",
	};
  }

  // B端申诉评价
	rpc AppealReview (AppealReviewRequest) returns (AppealReviewReply) {
		option (google.api.http) = {
			post: "/v1/review/appeal",
			body: "*"
		};
	}

  	// O端审核评价
	rpc AuditReview (AuditReviewRequest) returns (AuditReviewReply) {
		option (google.api.http) = {
			post: "/v1/review/audit",
			body: "*"
		};
	}


   	// O 端评价申诉
   	rpc AuditAppeal (AuditAppealRequest) returns (AuditAppealReply) {
		option (google.api.http) = {
			post: "/v1/appeal/audit",
			body: "*"
		};
	}

	// C端查看userID下所有评价 
	rpc ListReviewByUserID (ListReviewByUserIDRequest) returns (ListReviewByUserIDReply) {
		option (google.api.http) = {
			get: "/v1/{userID}/reviews",
		};
	}

}

message ReviewInfo{
	int64 reviewID = 1;
	int64 userID = 2;
	int64 orderID = 3;
	int32 score = 4;
	int32 serviceScore = 5;
	int32 expressScore = 6;
	string content = 7;
	string picInfo = 8;
	string videoInfo = 9;
	int32 status = 10;
}


message CreateReviewRequest {
    int64 userID = 1;
	int64 orderID = 2;
	int64 storeID = 3; 
	int32 score = 4;
	int32 serviceScore = 5 ;
	int32 expressScore = 6;
	string content = 7;
	string picInfo = 8;
	string videoInfo = 9;
	bool anonymous = 10;
}

message CreateReviewReply {
  int64 reviewID = 1;
}

message GetReviewRequest {
    int64 reviewID = 1;
}

message GetReviewReply {
	ReviewInfo data = 1;
}

message ReplyReviewRequest {
	int64 reviewID = 1;
	int64 storeID = 2;
	string content = 3;
	string picInfo = 4;
	string videoInfo = 5;
} 

message ReplyReviewReply {
	int64 replyID = 1;
}

message AppealReviewRequest {
	int64 reviewID = 1;
	int64 storeID = 2;
	string reason =  3;
	string content = 4;
	string picInfo = 5;
	string videoInfo = 6;
} 

message AppealReviewReply {
	int64 appealID = 1;
}


message AuditReviewRequest {
	int64 reviewID = 1;
	int32 status = 2;
	string opUser = 3;
	string opReason = 4;
	optional string opRemarks = 5;
} 

message AuditReviewReply {
	int64 reviewID = 1;
	int32 status = 2;
}


message AuditAppealRequest {
	int64 appealID = 1;
	int64 reviewID = 2;
	int32 status = 3;
	string opUser = 4;
	optional string opReason = 5;
}

message AuditAppealReply{

}

message GetReviewReplyRequest{
	int64 replyID=1;
}

message ReviewReplyInfo {
	int64 replyID = 1;
	int64 reviewID = 2;
	int64 storeID = 3;
	string content = 4;
}

message ListReviewByUserIDRequest {
	int64 userID = 1;
	int32 page = 2;
	int32 size = 3;
} 

message ListReviewByUserIDReply {
	repeated ReviewInfo data = 1;
}